# mpi-labs

./: CMakeLists.txt  README.md  lab1.c  lab1.output.txt  lab1.time.txt  lab1sync.c  lab2.benchmark.txt  lab2.c  lab2.output.txt  lab2.runner.bat  lab3.benchmark.txt  lab3.c  lab3.output.txt  lab3.runner.bat  lab4.benchmark.txt  lab4.c  lab4.output.txt  lab4.runner.bat  lab5.benchmark.txt  lab5.c  lab5.output.txt  lab5.runner.bat  lab6.c  lab6.output.txt  lab7.benchmark.txt  lab7.c  lab7.output.txt  lab7.runner.bat
